--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://vaishnavinawkar :MongoDB_77@zomato-master.narwc.mongodb.net/myFirstDatabase
+MONGO_URL=mongodb+srv://vaishnavin:MongoDB@zomato-master.narwc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
