--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,18 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-simple-image-viewer": "^1.1.1",
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
@@ -39,9 +43,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "devDependencies": {
