--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "leaflet": "^1.7.1",
@@ -22,6 +23,8 @@
     "react-simple-image-viewer": "^1.1.1",
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.3"
   },
